fix(r&w): add missing gap on grid rows

--- a/site/gdocs/components/ResearchAndWriting.scss
+++ b/site/gdocs/components/ResearchAndWriting.scss
@@ -22,6 +22,8 @@
 }
 
 .research-and-writing-row__link-container {
+    row-gap: 32px;
+
     @include sm-only {
         display: flex;
         overflow-x: auto;
